<resources>
    <string name="app_name">cvproject</string>
    <string name="title_activity_main">Blinkit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Category</string>
    <string name="title_notifications">Settings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="zomato_company_app">Zomato Company App</string>
    <string name="india_s_last_minute_app">India\'s last minute app</string>
    <string name="login_and_signup">Login or signup</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="login">Login</string>
    <string name="blinkit">Blinkit</string>


    <!--OtpVerification Screen-->
    <string name="msg_verification">Verification</string>
    <string name="msg_enter_code">Please enter the code sent to your Mobile Number</string>
    <string name="msg_no_otp_received">Didn\'t get an OTP?</string>
    <string name="label_resend_otp">Resend OTP</string>
    <string name="msg_six_word_otp">OTP should be of 6 digits</string>
    <string name="label_verify_otp">VERIFY OTP</string>
    <string name="msg_no_otp_provided">Please provide the OTP for Verification</string>
    <string name="err_msg_no_internet_connection">No Internet Connection!</string>
    <string name="msg_invalid_otp">Invalid OTP</string>
    <string name="msg_enter_mobile_number">Enter mobile number</string>
    <string name="msg_mobile_number_successfully_linked">Mobile Number successfully linked</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_us_on_playstore">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="about_us">About Us</string>
    <string name="blinkit_in">Blinkit in</string>
    <string name="admin">Admin</string>
    <string name="search_mango">Search Mango</string>
    <string name="bestsellers">Bestsellers</string>
    <string name="item_name">Item name</string>
    <string name="add_item">Add Item</string>
    <string name="item_price_in_rs">Item Price in Rs</string>
    <string name="item_name_can_t_be_empty">Item name can\'t be empty</string>
    <string name="item_price_can_t_be_empty">Item price can\'t be empty</string>
    <string name="item_quantity_can_t_be_empty">Item quantity can\'t be empty</string>
    <string name="select_image_first_to_proceed_further">Select Image First To Proceed Further</string>
    <string name="select_category_image_first_to_proceed_further">Select Category Image First To Proceed Further</string>
    <string name="permission_denied_can_t_access_gallery">Permission denied can\'t access gallery</string>
    <string name="add_image">Add Image</string>
    <string name="item_saved_successfully">Item saved successfully</string>
    <string name="failed_to_save_item">Failed to save item</string>
    <string name="unable_to_access_image">Unable to access image</string>
    <string name="rupee_symbol">\u20B9%1$s</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="minutes">%1$s minutes</string>
    <string name="quantity">Qty- %1$s</string>
    <string name="checkout">Checkout</string>
    <string name="place_order">Place Order</string>
    <string name="change">Change</string>
    <string name="delivering_to_home">Delivering to Home</string>
    <string name="total">TOTAL</string>
    <string name="retry">Retry</string>
    <string name="sorry_we_were_not_able_to_detect_your_location">Sorry, we were not able to detect your location</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="blinkit_text">India\'s Last Minute App ♥</string>
    <string name="poweredby_zomato">poweredBy Zomato</string>
    <string name="dismiss">Dismiss</string>
    <string name="item_removed">%1$s Removed</string>
    <string name="save_address">Save Address</string>
    <string name="please_enter_location_first">Please Enter Location First</string>
    <string name="item_catrgory">Item Category</string>
    <string name="select_category">Select Category</string>
    <string name="add">ADD</string>
    <string name="off">% OFF</string>
</resources>