<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_Large"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/login_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_Small"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/tv_blinkitTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/india_s_last_minute_app"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/login_and_signup"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_Mobile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:maxLength="10"
        android:background="@drawable/circular_bg"
        android:hint="@string/enter_your_mobile_number"
        android:inputType="phone" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="10dp"
        android:text="@string/login" />

</LinearLayout>
