<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cvproject.activites.activity.activity.AdminActivity">

    <include
        android:id="@+id/x_header"
        layout="@layout/header_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/x_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/button_add_image"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/rounded_corner_background"
                android:backgroundTint="@color/yellow_F1C571"
                android:elevation="@dimen/_2sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/baseline_create_24"
                app:layout_constraintBottom_toBottomOf="@id/image_view"
                app:layout_constraintEnd_toEndOf="@+id/image_view"
                app:layout_constraintStart_toStartOf="@+id/image_view"
                app:layout_constraintTop_toBottomOf="@id/image_view" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/rounded_corner_background"
                android:scaleType="fitXY" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <ImageView
                android:id="@+id/image_view_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_15sdp"
                android:background="@drawable/rounded_corner_background"
                android:scaleType="fitXY"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/button_add_image_category"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/rounded_corner_background"
                android:backgroundTint="@color/yellow_F1C571"
                android:elevation="@dimen/_2sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/baseline_create_24"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/image_view_category"
                app:layout_constraintEnd_toEndOf="@+id/image_view_category"
                app:layout_constraintStart_toStartOf="@+id/image_view_category"
                app:layout_constraintTop_toBottomOf="@id/image_view_category" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_item_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/item_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/item_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_item_price"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/item_price_in_rs"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/item_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_item_quantity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/item_quantity"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_save_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/rounded_corner_background"
        android:text="@string/add_item"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/item_price"
        app:layout_constraintStart_toStartOf="@id/item_price" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_corner_background_white"
        android:prompt="@string/select_category"
        app:layout_constraintEnd_toEndOf="@id/item_quantity"
        app:layout_constraintStart_toStartOf="@id/item_quantity"
        app:layout_constraintTop_toBottomOf="@id/item_quantity" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/button_save_image"
        app:layout_constraintEnd_toEndOf="@+id/button_save_image"
        app:layout_constraintStart_toStartOf="@+id/button_save_image"
        app:layout_constraintTop_toTopOf="@id/button_save_image" />

</androidx.constraintlayout.widget.ConstraintLayout>